PWA-769 - fix venue services screen on ie10

--- a/client/app/shared/styles/responsive/1024.scss
+++ b/client/app/shared/styles/responsive/1024.scss
@@ -24,4 +24,12 @@ html {
         width: calc(100% - 334px);
       }
   }
+
+  .venue-services{
+    form  {
+      venue-currency {
+        flex: 0 1 15% !important;
+      }
+    }
+  }
 }
